# dod-ocr-project

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: citations.py  demo.py  demo_data.json  extractor.py  main.py  merge.py  ops.py  pdf_renderer.py  routes.py  schema.py  session_store.py  streaming.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
backend/scripts/: build_demo.py
backend/tests/: test_extractor.py  test_live_extraction.py  test_merge.py  test_ops.py  test_pdf_renderer.py  test_providers.py  test_routes.py  test_schema.py
deploy/: README.md  deploy.sh  dod-ocr-backend.service  ecosystem.config.cjs  nginx.conf  sudoers.dod-ocr
docs/superpowers/: MANUAL-CHECKLIST.md
docs/superpowers/plans/: 2026-04-29-pdf-extraction-tool.md
docs/superpowers/specs/: 2026-04-29-pdf-extraction-tool-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  csv.test.ts  csv.ts  main.tsx  store.test.ts  store.ts  styles.css  types.ts
frontend/src/components/: AddFieldModal.tsx  Demo.tsx  DemoGate.tsx  DownloadCsvButton.tsx  FieldsPane.tsx  PdfPane.tsx  ProviderSelect.tsx  SelectionPopover.tsx  Upload.tsx  Workspace.tsx
