[project]
name = "pdf-extract-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24",
  "anthropic>=0.39",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pillow>=10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: live tests that hit the real Anthropic API (skipped by default)"]
addopts = "-m 'not live'"
